<resources>
    <string name="app_name">Smart List Proto</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_record_title">Title</string>
    <string name="add_new_record_label">New record</string>
    <string name="new_record_description">Description</string>
    <string name="new_record_quantity">Quantity</string>
    <string name="digits">0123456789.</string>
    <string name="new_record_price">Price</string>
    <string name="empty_tytle_error">Title can\'t be empty!</string>
    <string name="create_new_record_button">Create!</string>
    <string name="cancel_new_record_button">Cancel</string>
    <string name="bottom_sheet_total_label">Total:</string>
    <string name="fulfil_button">Fulfil</string>
    <string name="total_sum">Total sum:</string>
    <string name="fragment_record_list_title">Smart List</string>
    <string name="fragment_statistics_title">Statistics: %1s</string>
    <string name="fragment_receipt_list_title">Receipt List</string>
    <string name="save_receipt_button">Save Receipt</string>
</resources>