<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/new_record_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/add_new_record_label"
        android:textAlignment="center"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_record_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_double"
        android:hint="@string/new_record_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_record_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_record_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_regular"
        android:hint="@string/new_record_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_record_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_record_quantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_regular"
        android:hint="@string/new_record_quantity"
        app:layout_constraintEnd_toStartOf="@id/new_record_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_record_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/digits"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_record_price"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginEnd="@dimen/margin_regular"
        android:hint="@string/new_record_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/new_record_quantity"
        app:layout_constraintTop_toBottomOf="@+id/new_record_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/digits"
            android:inputType="numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_double"
        android:layout_marginBottom="@dimen/margin_regular"
        android:text="@string/create_new_record_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_record_quantity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_double"
        android:layout_marginTop="@dimen/margin_double"
        android:text="@string/cancel_new_record_button"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/create_button"
        app:layout_constraintTop_toBottomOf="@+id/new_record_quantity" />

</androidx.constraintlayout.widget.ConstraintLayout>
