<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="titleTextWatcher"
            type="android.text.TextWatcher" />

        <variable
            name="descriptionTextWatcher"
            type="android.text.TextWatcher" />

        <variable
            name="quantityTextWatcher"
            type="android.text.TextWatcher" />

        <variable
            name="priceTextWatcher"
            type="android.text.TextWatcher" />

        <variable
            name="onCreateClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="onCancelClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="titleError"
            type="Boolean" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_record_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_regular"
            android:text="@string/add_new_record_label"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/text_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_record_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_double"
            android:hint="@string/new_record_title"
            app:errorEnabled="@{titleError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_record_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                textWatcher="@{titleTextWatcher}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_record_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_double"
            android:hint="@string/new_record_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_record_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                textWatcher="@{descriptionTextWatcher}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_record_quantity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_double"
            android:hint="@string/new_record_quantity"
            app:layout_constraintEnd_toStartOf="@id/new_record_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_record_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="@string/digits"
                android:singleLine="true"
                textWatcher="@{quantityTextWatcher}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_record_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_double"
            android:hint="@string/new_record_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_record_quantity"
            app:layout_constraintTop_toBottomOf="@+id/new_record_description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:digits="@string/digits"
                android:singleLine="true"
                textWatcher="@{priceTextWatcher}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_record_button"
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_double"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_record_quantity"
            android:onClick="@{onCreateClick}"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_new_record_button"
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/margin_double"
            android:layout_marginTop="@dimen/margin_double"
            app:layout_constraintEnd_toStartOf="@+id/create_button"
            app:layout_constraintTop_toBottomOf="@+id/new_record_quantity"
            android:onClick="@{onCancelClick}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>